--- a/package.json
+++ b/package.json
@@ -1,8 +1,25 @@
 {
   "name": "pos-starter",
   "version": "3.0.0",
-  "author": "POS Starter",
-  "homepage": "https://www.yosanai.com/",
+  "description": "POS Starter App",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/perusworld/pos-starter.git"
+  },
+  "keywords": [
+    "nodejs",
+    "typescript",
+    "pos"
+  ],
+  "engines": {
+    "node": "18.x"
+  },
+  "author": "Saravana Perumal Shanmugam <perusworld@linux.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/perusworld/pos-starter/issues"
+  },
+  "homepage": "https://github.com/perusworld/pos-starter",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -63,6 +80,5 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.8.4"
-  },
-  "description": "POS Starter App"
+  }
 }
