--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Deploy to GH-Pages
 on:
   push:
-    branches: [$default-branch]
+    branches:
+      - master
 
   workflow_dispatch:
 
@@ -21,7 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm run build:prod
+      - run: npm run build:gh
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
