--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
+    "build:gh": "ng build --configuration production --base-href '/pos-starter'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
