--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ionic/storage-angular": "^3.0.6",
     "ionicons": "^7.0.0",
     "luxon": "^3.3.0",
+    "qrcode": "^1.5.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -67,6 +68,7 @@
     "@types/jasmine": "~4.0.0",
     "@types/luxon": "^3.3.0",
     "@types/node": "^12.11.1",
+    "@types/qrcode": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.6.0",
